--- a/css/globals.css
+++ b/css/globals.css
@@ -10,6 +10,9 @@
 html {
   font-size: 62.5%;
 }
+.links{
+  font-size: 2rem;
+}
 
 body {
   font-size: 1.6rem;
@@ -31,10 +34,18 @@ h1 {
   color: var(--primary-color);
 }
 
+h2 {
+  font-size: 6.4rem;
+  font-weight: 700;
+  color: var(--pink);
+}
+
+
 .secondary-title {
   font-size: 4rem;
   font-weight: 700;
-  color: var(--primary-color);
+  color: var(--pink);
+  
 }
 
 .tertiary-title {
@@ -44,11 +55,19 @@ h1 {
   color: var(--secondary-color);
 }
 
+.fourth-title {
+  font-size: 2.2rem;
+  font-weight: 400;
+  line-height: 4.5rem;
+  color: var(--pink);
+}
+
 p,
 .p {
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 3.5rem;
+  color: var(--white);
 }
 
 p:not(:last-of-type),
@@ -77,7 +96,7 @@ p:not(:last-of-type),
   max-width: 120rem;
   padding: 0 4rem;
   margin: 0 auto;
-  margin-bottom: 26rem;
+  margin-bottom: 10rem;
 }
 
 .mb-0 {
